fix shape clipping on resize

--- a/css/index.css
+++ b/css/index.css
@@ -39,17 +39,92 @@ h6,
 button {
   font-family: "Ubuntu", sans-serif;
 }
+h1 {
+  font-size: 6rem;
+}
+h2 {
+  font-size: 3rem;
+}
+h3 {
+  font-size: 1.8rem;
+}
+h4 {
+  font-size: 1.4rem;
+}
+h5 {
+  font-size: 1.2rem;
+}
+h6 {
+  font-size: 1rem;
+}
+.btn {
+  display: inline-block;
+  font-size: 2rem;
+  background-color: #00d9ff;
+  padding: 1rem 2rem;
+  border-radius: 5px;
+  color: #292929;
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2);
+  transition: 0.1s ease-out all;
+  font-family: "Ubuntu", sans-serif;
+}
+.btn:hover {
+  color: #fff;
+  background-color: #00aecc;
+  transform: translateY(-2px);
+  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
+}
+.btn:active {
+  color: #000;
+  transform: translateY(1px);
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2);
+}
+.home {
+  height: calc(100vh - 5rem);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-image: linear-gradient(to bottom right, #000, #5a5a5a);
+}
+.home .container {
+  max-width: 80vw;
+}
+.home .container .hero {
+  transform: skewX(-10deg);
+  background-color: rgba(227, 227, 227, 0.5);
+  padding: 5rem;
+  box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.2);
+}
+.home .container .hero .content {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  transform: skewX(10deg);
+}
+.home .container .hero .content *:not(:last-child) {
+  margin-bottom: 2rem;
+}
 .header {
-  background-color: #FF6600;
-  padding: 2rem 4rem;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #f3470d;
+  padding: 0 4rem;
   box-shadow: 0 5px 5px rgba(0, 0, 0, 0.2);
+  height: 5rem;
 }
 .header nav {
   display: flex;
+  flex-direction: row;
   justify-content: space-between;
+  align-items: center;
+  width: 100%;
 }
 .header nav h1 {
-  color: #FFF;
+  color: #fff;
   font-size: 3rem;
 }
 .header nav h1:hover {
@@ -63,5 +138,5 @@ button {
   margin-right: 4rem;
 }
 .header nav .nav-links a:hover {
-  color: #E3E3E3;
+  color: #e3e3e3;
 }
