--- a/less/home.less
+++ b/less/home.less
@@ -8,18 +8,22 @@
     @color-darkgrey
   );
 
-  .hero {
-    transform: skewX(-10deg);
-    background-color: rgba(@color-offwhite, 0.5);
-    padding: 5rem;
-    .shadow(0px, 2px, 5px);
+  .container {
+    max-width: 80vw;
 
-    .content {
-      .flex(column, center, center);
-      transform: skewX(10deg);
+    .hero {
+      transform: skewX(-10deg);
+      background-color: rgba(@color-offwhite, 0.5);
+      padding: 5rem;
+      .shadow(0px, 2px, 5px);
 
-      *:not(:last-child) {
-        margin-bottom: 2rem;
+      .content {
+        .flex(column, center, center);
+        transform: skewX(10deg);
+
+        *:not(:last-child) {
+          margin-bottom: 2rem;
+        }
       }
     }
   }
